--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="images/lagos.png" alt="LAGOS PDX Logo" class="logo" />
+    <img src="lagos.png" alt="LAGOS PDX Logo" class="logo" />
     <h1>Coming Soon</h1>
     <p>Get ready for a new vibe in Portland. Dining. Nightlife. Culture.</p>
     
